# src/main/java/com/hairtransplant/project/controllers/GoalsController.java
@@ -3,6 +3,9 @@ package com.hairtransplant.project.controllers;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,7 +17,12 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.hairtransplant.project.entities.Goals;
+import com.hairtransplant.project.entities.Goals;
+import com.hairtransplant.project.entities.PersonalInformation;
 import com.hairtransplant.project.repositories.GoalsRepository;
+import com.hairtransplant.project.repositories.PersonalInformationRepository;
+import com.hairtransplant.project.services.GoalsExporterExcelService;
+import com.hairtransplant.project.services.HiarLossExporterExcelService;
 
 @RestController
 @RequestMapping("/api/goalsController")
@@ -22,7 +30,14 @@ public class GoalsController {
 
 	@Autowired
 	GoalsRepository goalsRepository;
-
+	
+	@Autowired
+	PersonalInformationRepository personalInformationRepository;
+	
+	@GetMapping("/count")
+	public Long getCount() {
+		return goalsRepository.count();
+	}
 	@GetMapping("search/all")
 	public List<Goals> getAllGoalss() {
 		return goalsRepository.findAll();
@@ -39,6 +54,13 @@ public class GoalsController {
 
 	@PostMapping("/save")
 	public Goals createGoals(@RequestBody Goals goals) {
+		if(goals.getStringParent() != null) {
+			Long parentId = Long.parseLong(goals.getStringParent());
+			PersonalInformation pi = personalInformationRepository.findById(parentId).orElse(null);
+			if(pi != null) {
+				goals.setPersonalInformation(pi);
+			}
+		}
 		return goalsRepository.save(goals);
 	}
 
@@ -67,5 +89,36 @@ public class GoalsController {
 		}
 		goalsRepository.delete(goals);
 		return ResponseEntity.ok().build();
+	}
+	@DeleteMapping("delete/all")
+	public ResponseEntity<?> deleteSelectedGoals(@RequestBody List<Goals> GoalsList) {
+
+		if (GoalsList.isEmpty()) {
+			return ResponseEntity.badRequest().body("List of Life Style is empty.");
+		}
+		goalsRepository.deleteAll(GoalsList);
+		return ResponseEntity.ok().build();
+	}
+	
+	@PostMapping("/export-to-excel")
+	public ResponseEntity<byte[]> exportGoalsToExcel(@RequestBody List<Goals> GoalsList) {
+	  try {
+	    byte[] excelBytes = GoalsExporterExcelService.exportGoals(GoalsList);
+	    
+	    HttpHeaders headers = new HttpHeaders();
+	    headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+	    headers.setContentDispositionFormData("attachment", "Hair-Loss.xlsx");
+	    
+	    return new ResponseEntity<>(excelBytes, headers, HttpStatus.OK);
+	  } catch (Exception e) {
+	    e.printStackTrace();
+	  }
+	  return null;
+	}
+	@PostMapping("/import-excel")
+	public List<Goals> importExcel(@RequestBody byte[] data) throws Exception {
+	    List<Goals> l =  GoalsExporterExcelService.importExcelFile(data);
+	    System.out.println(l.get(0).getPersonalInformation().toString());
+	    return l;
 	}
 }
