# src/main/java/com/hairtransplant/project/entities/Goals.java
@@ -1,6 +1,8 @@
 package com.hairtransplant.project.entities;
 
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
+
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 
@@ -11,6 +13,7 @@ import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
+import jakarta.persistence.Transient;
 
 @Entity
 @Table(name = "goals")
@@ -20,7 +23,8 @@ public class Goals {
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	@Column(name = "id")
 	private Long id;
-
+	
+	@JsonIgnore
 	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(name = "personal_information_id")
 	private PersonalInformation personalInformation;
@@ -36,7 +40,11 @@ public class Goals {
 
 	@Column(name = "date_dataEntry")
 	private String dateDataEntry;
-
+	
+	
+	@Transient
+	private String parent;
+	
 	public Goals() {
 	}
 
@@ -98,6 +106,17 @@ public class Goals {
 	public void setDateDataEntry(String dateDataEntry) {
 		this.dateDataEntry = dateDataEntry;
 	}
+	
+	public String getIdParent() {
+		return personalInformation.getId().toString();
+	}
+	
+	public String getStringParent() {
+		return parent;
+	}
 
+	public void setParent(String parent) {
+		this.parent = parent;
+	}
 	// Constructor, getters and setters
 }
